@@ -1,3 +1,9 @@
+05/10/07 Bastien Boussau & Julien Dutheil
+* Non-homogenous sequence simulation in BppSeqGen.
+* Model options in files have changed to suit the non-homogeneous case.
+  The covarion option now is fully part of the model options, following the
+	new syntax 'model=modelname+covarionname', eg 'T92+G2001'.
+
 03/10/07 Julien Dutheil
 * New program Bio++ Sequence Manipulator
 
